--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hactoberfest",
+  "name": "idea-z",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
